--- a/notes.ipynb
+++ b/notes.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chemistry 313\n",
+    "# Chemistry 313: Machine Learning in Chemistry\n",
     "Spring 2025, Dinner"
    ]
   },
@@ -22,18 +22,38 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## 3/24/25\n"
+    "jkey = jax.random.PRNGKey(seed=1)\n",
+    "j2key = jax.random.PRNGKey(seed=2)\n",
+    "j3key = jax.random.PRNGKey(seed=3)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 3/24/25\n",
+    "Types of ML\n",
+    " - supervised: data = $\\{(x_i,y_i)\\}_i$, x is features y is label\n",
+    "    - regression ($y \\in \\mathbb{R}^d$)\n",
+    "    - classifcation ($y \\in \\mathbb{Z}^d, \\{c_0,c_1,\\ldots,c_d\\}$)\n",
+    " - unsupervised\n",
+    "    - dimensional reduction (visualization, speed optimization)\n",
+    "    - density estimation\n",
+    "    - clustering\n",
+    " - RL\n",
+    "    - choosing actions (faces the credit assignment problem which is overdetermined)\n",
+    "    - protein design\n",
+    "\n",
+    "test data, train data, validation data (holdout) to prevent overfitting\n",
+    "- in chemistry hard to split because often correlations, \"leakage\" between train and test\n",
+    "cross validation (kfold)\n",
+    "- make k groups of test-train and cycle through and then average over the groups"
+   ]
   }
  ],
  "metadata": {
