--- a/notes.ipynb
+++ b/notes.ipynb
@@ -93,6 +93,66 @@
     "Taking gradients and setting to 0: $$\\hat{y} = \\Phi w$$\n",
     "$$w = (\\Phi^T \\Phi)^{-1}\\Phi^{-T}y_n$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4/4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PCA\n",
+    "\n",
+    "$ x \\in \\mathbb{R}^R \\quad z \\in \\mathbb{R}^K$\n",
+    "\n",
+    "\n",
+    "$L = \\frac{1}{N} \\sum_n^N ||x_n - \\text{decode}(\\text{encode}(x))||^2$\n",
+    "\n",
+    "encode, decode are linear\n",
+    "\n",
+    "$z = W^T x \\quad W^TW = I$ W is orthogonal\n",
+    "\n",
+    "$L = \\frac{1}{N}\\sum_n ||x-Wz||^2$\n",
+    "\n",
+    "$x_n = \\sum_k z_{nk}w_k$\n",
+    "\n",
+    "for $K=1$\n",
+    "\n",
+    "$L = \\frac{1}{N}\\sum_n (x-w_1z_{n1})^T(x_n -w_1 z_{n1})$\n",
+    "\n",
+    "$\\frac{\\partial L}{\\partial z_{n1}} = -2w_1 \\cdot x_n + 2 z_{n1}$\n",
+    "\n",
+    "$\\tilde{L} = - \\frac{1}{N}\\sum_n z_{n1}^2 = - w_1^T (\\frac{1}{N}\\sum_n x_n x_n^T) w_1 = -w_1^T \\Sigma w_1$\n",
+    "\n",
+    "Unitarity Constraint:\n",
+    "\n",
+    "$\\tilde{L}' = -w_1^T \\Sigma w_1 + \\lambda (w_1^T  w_1 -1)$\n",
+    "\n",
+    "$\\Sigma w_1 = \\lambda w_1$\n",
+    "\n",
+    "$\\lambda = w_1^T \\Sigma w_1 = \\tilde{L}$\n",
+    "\n",
+    "therefore pick the largest eigenvalue of $\\Sigma$\n",
+    "\n",
+    "#### PCA maximizes variance\n",
+    "$\\text{Var}(z_{n1}) = \\frac{1}{N} \\sum_n z_{n1}^2 = -\\tilde{L}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
