--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -774,7 +774,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In HW1, the RMSE for the linear model was 1.654, so this is a significant improvement."
+    "In HW1, the RMSE for the linear model was 1.654, so this is a significant improvement. The titles for the above and below plots in d) are the shape of the hidden layers, the L2 regularization parameter, and the activation function."
    ]
   },
   {
