--- a/notes.ipynb
+++ b/notes.ipynb
@@ -68,7 +68,8 @@
     "\n",
     "### Bias-Variance Decomposition\n",
     "$$y = f(x) + \\varepsilon$$\n",
-    "learn $\\hat{y}(\\{x_n,y_n\\})\n",
+    "learn $\\hat{y}(\\{x_n,y_n\\})$\n",
+    "\n",
     "$E[(y-\\hat{y})^2] = (f(x)-E[\\hat{y}])^2 + E[(E[\\hat{y}]-\\hat{y})^2] + E[\\varepsilon^2]$\n",
     "\n",
     "ie = average deviation from truth based on model (bias)^2 + variance of the model between data draws + noise\n",
