--- a/hw3/hw3.ipynb
+++ b/hw3/hw3.ipynb
@@ -1311,7 +1311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is basically identical, if slightly worse than the model without coordinate date. This is because it is getting more data but not using any of the geometric properties of the molecules, so it's essentially adding random noise"
+    "This is basically identical, if slightly worse than the model without coordinate date. This is because it is getting more data but not using any of the geometric properties of the molecules, so it's essentially adding random noise that the model wastes time trying to learn"
    ]
   },
   {
@@ -1875,7 +1875,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The test and val MAEs are very close to the original model with no coordinate data when trained for a similar number of epochs, but it appears with more training this would decrease more because there is a more constant learning rate on the train data suggesting there is more to learn (which makes sense since there are more parameters)."
+    "The test and val MAEs are very close to the original model (better than just coords) when trained for the same amount of time. The large loss spike is interesting, but it probably doesn't affect much."
    ]
   },
   {
@@ -2176,7 +2176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The global prediction is still tranformation invariant because it is predicting a global property"
+    "The global prediction is still tranformation invariant because it is predicting a global property which is what you want unless you are interacting with some kind of external field (not the case here)."
    ]
   },
   {
