cleaning up more

--- a/final_project/sc_committor_rates/2D/validating.ipynb
+++ b/final_project/sc_committor_rates/2D/validating.ipynb
@@ -186,6 +186,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ True,  True, False, False, False])"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.arange(5) < 2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 141,
    "metadata": {},
    "outputs": [
