wtf not working

--- a/final_project/sc_committor_rates/2D/validating.ipynb
+++ b/final_project/sc_committor_rates/2D/validating.ipynb
@@ -425,6 +425,101 @@
    "source": [
     "eh it's fiddly, just make epsilon = .02"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MFPT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MFPT K3:\n",
+      " tensor([[-0.0020,  0.0010,  0.0010],\n",
+      "        [ 0.0010, -0.0020,  0.0010],\n",
+      "        [ 0.0010,  0.0010, -0.0020]]) \n",
+      " tensor([[   0., 1000., 1000.],\n",
+      "        [1000.,    0., 1000.],\n",
+      "        [1000., 1000.,    0.]])\n",
+      "MFPT Chain3:\n",
+      " tensor([[-0.0010,  0.0010,  0.0000],\n",
+      "        [ 0.0010, -0.0020,  0.0010],\n",
+      "        [ 0.0000,  0.0010, -0.0010]]) \n",
+      " tensor([[   0.0000,  999.9999, 2999.9998],\n",
+      "        [1999.9999,    0.0000, 1999.9999],\n",
+      "        [2999.9998,  999.9999,    0.0000]])\n",
+      "MFPT C4:\n",
+      " tensor([[-0.0020,  0.0010,  0.0000,  0.0010],\n",
+      "        [ 0.0010, -0.0020,  0.0010,  0.0000],\n",
+      "        [ 0.0000,  0.0010, -0.0020,  0.0010],\n",
+      "        [ 0.0010,  0.0000,  0.0010, -0.0020]]) \n",
+      " tensor([[   0.0000, 1499.9999, 2000.0000, 1500.0000],\n",
+      "        [1500.0000,    0.0000, 1500.0000, 2000.0001],\n",
+      "        [2000.0001, 1499.9999,    0.0000, 1500.0000],\n",
+      "        [1500.0000, 1999.9999, 1500.0000,    0.0000]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "def compute_mfpt(Q):\n",
+    "    n = Q.shape[0]\n",
+    "    M = torch.zeros_like(Q)\n",
+    "    idx = torch.arange(n, device=Q.device)\n",
+    "    for j in range(n):\n",
+    "        mask = idx != j\n",
+    "        Qj = Q[mask][:, mask]\n",
+    "        mj = torch.linalg.solve(-Qj, torch.ones(n-1, dtype=Q.dtype, device=Q.device))\n",
+    "        M[mask, j] = mj\n",
+    "    return M\n",
+    "\n",
+    "k = 1e-3\n",
+    "\n",
+    "# K₃\n",
+    "n = 3\n",
+    "Q = torch.full((n, n), k)\n",
+    "Q.fill_diagonal_(0)\n",
+    "Q.diagonal().copy_(-Q.sum(dim=1))\n",
+    "M_K3 = compute_mfpt(Q)\n",
+    "print(\"MFPT K3:\\n\", Q,\"\\n\",M_K3)\n",
+    "\n",
+    "# Chain of 3\n",
+    "n = 3\n",
+    "Q = torch.zeros((n, n))\n",
+    "for i in range(n-1):\n",
+    "    Q[i, i+1] = k\n",
+    "    Q[i+1, i] = k\n",
+    "Q.diagonal().copy_(-Q.sum(dim=1))\n",
+    "M_chain3 = compute_mfpt(Q)\n",
+    "print(\"MFPT Chain3:\\n\", Q,\"\\n\",M_chain3)\n",
+    "\n",
+    "# C₄\n",
+    "n = 4\n",
+    "Q = torch.zeros((n, n))\n",
+    "edges = [(0,1), (1,2), (2,3), (3,0)]\n",
+    "for i, j in edges:\n",
+    "    Q[i, j] = k\n",
+    "    Q[j, i] = k\n",
+    "Q.diagonal().copy_(-Q.sum(dim=1))\n",
+    "M_C4 = compute_mfpt(Q)\n",
+    "print(\"MFPT C4:\\n\", Q,\"\\n\",M_C4)"
+   ]
   }
  ],
  "metadata": {
