refactoring, updating readmes, moving utils around, msm init

--- a/final_project/sc_committor_rates/2D/validating_testing.ipynb
+++ b/final_project/sc_committor_rates/2D/validating_testing.ipynb
@@ -16,7 +16,7 @@
     "import json\n",
     "import torch\n",
     "import numpy as np\n",
-    "from config import CommittorNet\n",
+    "from global_utils import CommittorNet\n",
     "from sklearn.cluster import DBSCAN\n",
     "import matplotlib.pyplot as plt\n",
     "with open('rates_db.json') as f:\n",
