--- a/final_project/sc_committor_rates/2D/msm.ipynb
+++ b/final_project/sc_committor_rates/2D/msm.ipynb
@@ -11,42 +11,41 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/cjblake/Desktop/C313/final_project/sc_committor_rates/2D/utils.py:9: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  X, Y = torch.meshgrid(torch.tensor(x), torch.tensor(y), indexing='ij')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
-    "from global_utils import CommittorNet"
+    "from global_utils import CommittorNet, mpath"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_name = \"your_run_name\""
+    "run_name = \"wells_square_0_a0_b3_K2\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "net2 = CommittorNet(dim=2,K=2)\n",
     "net2.load_state_dict(torch.load(mpath(f\"{run_name}.pt\")))\n",
     "running_xs_all = torch.load(mpath(f\"{run_name}_rxs.pt\"))\n",
     "out_means_k = torch.load(mpath(f\"{run_name}_k.pt\"))\n",
     "centers_k = torch.load(mpath(f\"{run_name}_ctrs.pt\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
