--- a/final_project/sc_committor_rates/2D/msm.ipynb
+++ b/final_project/sc_committor_rates/2D/msm.ipynb
@@ -177,6 +177,155 @@
     "\n",
     "print(torch.stack(k_centers_out))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Markov State Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_name = \"wells_linear_5_a0_b4_K5\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rates = [3.52506437e-05, 3.70972579e-05, 2.27186130e-03, 6.92297970e-04, 2.00196078e-03]\n",
+    "transfers = [[2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2], [4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4], [0, 0, 3, 3, 3, 3, 3, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 0, 3, 3, 0, 0, 0, 3, 0, 0, 0, 0, 3, 0, 3, 0, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0], [2, 2, 2, 2, 2, 2, 2, 4, 4, 4, 4, 2, 4, 2, 4, 2, 4, 2, 4, 2, 4, 2, 4, 2, 2, 2, 2, 2, 4, 4, 4, 4, 2, 4, 2, 2, 2, 4, 2, 4, 4, 4, 2, 4, 2, 2], [1, 1, 1, 1, 1, 3, 3, 1, 3, 3, 1, 1, 1, 3, 1, 3, 1, 1, 3, 1, 3, 1, 3, 3, 1, 1, 1, 1, 1, 1, 3, 3, 1, 1, 1, 1, 1, 1, 1, 1, 1, 3, 1, 1, 3, 1, 1, 3, 3, 1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def build_Q(exit_rates, exit_indices):\n",
+    "    K = len(exit_rates)\n",
+    "    Q = np.zeros((K, K))\n",
+    "    for i, dests in enumerate(exit_indices):\n",
+    "        n = len(dests)\n",
+    "        if n:\n",
+    "            counts = np.bincount(dests, minlength=K)\n",
+    "            Q[i] = exit_rates[i] * counts / n\n",
+    "        Q[i, i] = -exit_rates[i]\n",
+    "    return Q\n",
+    "\n",
+    "def mfpt_all_pairs(Q):\n",
+    "    K = Q.shape[0]\n",
+    "    M = np.zeros((K, K))\n",
+    "    for j in range(K):\n",
+    "        A = Q.copy()\n",
+    "        b = -np.ones(K)\n",
+    "        A[j, :] = 0\n",
+    "        A[j, j] = 1\n",
+    "        b[j] = 0\n",
+    "        M[:, j] = np.linalg.solve(A, b)\n",
+    "    return M\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-3.52506437e-05  0.00000000e+00  3.52506437e-05  0.00000000e+00\n",
+      "   0.00000000e+00]\n",
+      " [ 0.00000000e+00 -3.70972579e-05  0.00000000e+00  0.00000000e+00\n",
+      "   3.70972579e-05]\n",
+      " [ 1.71461230e-03  0.00000000e+00 -2.27186130e-03  5.57248998e-04\n",
+      "   0.00000000e+00]\n",
+      " [ 0.00000000e+00  0.00000000e+00  3.91298853e-04 -6.92297970e-04\n",
+      "   3.00999117e-04]\n",
+      " [ 0.00000000e+00  1.36133333e-03  0.00000000e+00  6.40627450e-04\n",
+      "  -2.00196078e-03]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Q_run = build_Q(rates, transfers)\n",
+    "print(Q_run)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q_run.sum(axis=1) # should be 0s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[     0., 293373.,  28368., 117450., 236578.],\n",
+       "       [149743.,      0., 133618.,  85799.,  26956.],\n",
+       "       [ 16124., 265005.,      0.,  89082., 208210.],\n",
+       "       [ 63944., 175923.,  47819.,      0., 119128.],\n",
+       "       [122787.,  56795., 106662.,  58843.,      0.]])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mfpt = mfpt_all_pairs(Q_run).round()\n",
+    "mfpt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "effective rate 0->1: 3.41e-06\n",
+      "effective rate 1->0: 6.68e-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"effective rate 0->1:\",f\"{1/mfpt[0,1]:.2e}\")\n",
+    "print(\"effective rate 1->0:\",f\"{1/mfpt[1,0]:.2e}\")"
+   ]
   }
  ],
  "metadata": {
