--- a/final_project/sc_committor_rates/2D/msm.ipynb
+++ b/final_project/sc_committor_rates/2D/msm.ipynb
@@ -10,16 +10,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cjblake/Desktop/C313/final_project/sc_committor_rates/2D/utils.py:9: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  X, Y = torch.meshgrid(torch.tensor(x), torch.tensor(y), indexing='ij')\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
     "from global_utils import CommittorNet, mpath, cnmsam\n",
     "from sklearn.cluster import DBSCAN\n",
     "import numpy as np\n",
-    "from config import V"
+    "from config import V\n",
+    "import json"
    ]
   },
   {
@@ -125,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,17 +144,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rates = [3.52506437e-05, 3.70972579e-05, 2.27186130e-03, 6.92297970e-04, 2.00196078e-03]\n",
-    "transfers = [[2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2], [4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4], [0, 0, 3, 3, 3, 3, 3, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 0, 3, 3, 0, 0, 0, 3, 0, 0, 0, 0, 3, 0, 3, 0, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0], [2, 2, 2, 2, 2, 2, 2, 4, 4, 4, 4, 2, 4, 2, 4, 2, 4, 2, 4, 2, 4, 2, 4, 2, 2, 2, 2, 2, 4, 4, 4, 4, 2, 4, 2, 2, 2, 4, 2, 4, 4, 4, 2, 4, 2, 2], [1, 1, 1, 1, 1, 3, 3, 1, 3, 3, 1, 1, 1, 3, 1, 3, 1, 1, 3, 1, 3, 1, 3, 3, 1, 1, 1, 1, 1, 1, 3, 3, 1, 1, 1, 1, 1, 1, 1, 1, 1, 3, 1, 1, 3, 1, 1, 3, 3, 1]]"
+    "with open(mpath(run_name + \"_exits.json\"), encoding=\"utf-8\") as f:\n",
+    "    transfers_dict = json.load(f)\n",
+    "transfers = [transfers_dict[key] for key in transfers_dict.keys()]\n",
+    "rates = torch.load(mpath(run_name+ \"_k.pt\")).cpu().numpy()[-1,:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2.34161626e-05, 1.53143666e-05, 3.93428392e-03, 1.47087876e-03,\n",
+       "       1.53457274e-03])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rates[-1,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rates = [3.52506437e-05, 3.70972579e-05, 2.27186130e-03, 6.92297970e-04, 2.00196078e-03]\n",
+    "# transfers = [[2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2], [4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4], [0, 0, 3, 3, 3, 3, 3, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 0, 3, 3, 0, 0, 0, 3, 0, 0, 0, 0, 3, 0, 3, 0, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0], [2, 2, 2, 2, 2, 2, 2, 4, 4, 4, 4, 2, 4, 2, 4, 2, 4, 2, 4, 2, 4, 2, 4, 2, 2, 2, 2, 2, 4, 4, 4, 4, 2, 4, 2, 2, 2, 4, 2, 4, 4, 4, 2, 4, 2, 2], [1, 1, 1, 1, 1, 3, 3, 1, 3, 3, 1, 1, 1, 3, 1, 3, 1, 1, 3, 1, 3, 1, 3, 3, 1, 1, 1, 1, 1, 1, 3, 3, 1, 1, 1, 1, 1, 1, 1, 1, 1, 3, 1, 1, 3, 1, 1, 3, 3, 1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,9 +219,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-2.34161626e-05  0.00000000e+00  2.34161626e-05  0.00000000e+00\n",
+      "   0.00000000e+00]\n",
+      " [ 0.00000000e+00 -1.53143666e-05  0.00000000e+00  0.00000000e+00\n",
+      "   1.53143666e-05]\n",
+      " [ 2.74207667e-03  0.00000000e+00 -3.93428392e-03  1.19220725e-03\n",
+      "   0.00000000e+00]\n",
+      " [ 0.00000000e+00  0.00000000e+00  8.27369300e-04 -1.47087876e-03\n",
+      "   6.43509456e-04]\n",
+      " [ 0.00000000e+00  9.59107965e-04  0.00000000e+00  5.75464779e-04\n",
+      "  -1.53457274e-03]]\n"
+     ]
+    }
+   ],
    "source": [
     "Q_run = build_Q(rates, transfers)\n",
     "print(Q_run)"
@@ -186,18 +246,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.00000000e+00,  0.00000000e+00, -2.16840434e-19,  0.00000000e+00,\n",
+       "        0.00000000e+00])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Q_run.sum(axis=1) # should be 0s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[     0., 349080.,  42706., 141767., 270686.],\n",
+       "       [301352.,      0., 263072., 175866.,  65298.],\n",
+       "       [ 38280., 306374.,      0.,  99062., 227980.],\n",
+       "       [125486., 207313.,  87206.,      0., 128919.],\n",
+       "       [236054.,  78394., 197774., 110568.,      0.]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mfpt = mfpt_all_pairs(Q_run).round()\n",
     "mfpt"
@@ -205,12 +292,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "effective rate 0->1: 2.86e-06\n",
+      "effective rate 1->0: 3.32e-06\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"effective rate 0->1:\",f\"{1/mfpt[0,1]:.2e}\")\n",
     "print(\"effective rate 1->0:\",f\"{1/mfpt[1,0]:.2e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Very good agreement forward and backward!"
    ]
   }
  ],
